feat: new entity RoomType, create room type API
