# modules/rooms/room_type.model.go
@@ -1,0 +1,25 @@
+package rooms
+
+import (
+	"Hotel_BE/common"
+	"Hotel_BE/modules/bases"
+)
+
+const EntityName = "RoomType"
+
+type RoomType struct {
+	bases.BaseModel        `json:"-" gorm:"embedded"`
+	Name                   string  `json:"name" gorm:"column:name"`
+	BedCount               int     `json:"bed_count" gorm:"column:bed_count"`
+	ChargesForCancellation float64 `json:"charges_for_cancellation" gorm:"column:charges_for_cancellation"`
+	Price                  float64 `json:"price" gorm:"column:price"`
+	FoodOption             string  `json:"food_option" gorm:"column:food_option"`
+}
+
+func (r RoomType) TableName() string {
+	return "room_types"
+}
+
+func (r *RoomType) Mask() {
+	r.FakeId(common.DbRoomType)
+}
